tests/compile_errors/008-error-message.buzz
| Hello world
test "Throwing an object instance with a message field" {
    throw .{ message = "Hello world" };
}